started edits for round 2

--- a/output/papers/Swehvd-acoustics.Rmd
+++ b/output/papers/Swehvd-acoustics.Rmd
@@ -146,7 +146,7 @@ INCLUDE_SI = F     # switch on/off to include SI.
 # Introduction {#sec:intro}
 The Swedish vowel inventory consists of 21 categories that differ in spectral (formant frequencies) and temporal cues (duration). It forms a typologically rather complex space, characterized by a systematic quantity distinction resulting in 9 long and short vowel pairs, 3 different levels of lip-rounding, and contextually conditioned allophones to /`r linguisticsdown::cond_cmpl("ɛ")`/ and /`r linguisticsdown::cond_cmpl("ø")`/ in position before /r/ or any retroflex segments. Given the crowdedness of the space and resulting category overlap for some vowels, previous work has reported on the need to look beyond static point estimates of the two primary determinants to vowel identity cross-linguistically, the first two formants [F1 and F2, e.g., @joos1948; @Ladefoged1957; @nearey-assmann1986; @peterson1961], as well as the hypothesized importance of additional cues besides F1 and F2, such as the third formant (F3) for rounded vs. unrounded categories [e.g., @fant1959; @fant1969; @fujimura1967; @kuronen2000], duration for certain long-short vowel pairs [@behne-kirk1997], and formant dynamics for some front contrasts [@kuronen2000; @pelzer-boersma2019].
 
-This paper investigates the acoustic characteristics of modern-day Swedish vowels in two studies that aim to contribute to our understanding of language-specific and language-general patterns of vowel acoustics. The first study presents a comprehensive description of the primary acoustic cues to vowel identity, using a recently released database of *h-VOWEL-d* (short: hVd) words recorded by 44 male and female talkers of Swedish, the SwehVd database [@persson-jaeger2023]. The second study assesses whether the Swedish vowel space has been submitted to changes over the last generation, by comparing the acoustics of SwehVd against that of a reference material from 1999 [@eriksson2004]. The variety investigated is Central Swedish, the regional standard variety of Swedish spoken in an area around and beyond Stockholm (eastern Svealand) [@bruce2009; @elert1994; @riad2014].^[For the reader unfamiliar with Central Swedish, Section \@ref(sec:sweVowels) provides an overview of the acoustics of Central Swedish vowel space.] Existing descriptions of the entire space of 21 vowels rest on recordings made more than 25 years ago [reported in, e.g., @engstrand1999; @kuronen2000; @leinonen2010; @riad2014]. Two of the most recent studies are @leinonen2010 and @kuronen2000 (Table \@ref(tab:previous-work)). The former is based on recordings obtained around 1999 of all vowels, of which four short vowels were omitted from analysis. It covers 98 rural locations in Sweden and Swedish-speaking parts of Finland, including reference talkers of Standard Swedish. The latter covers the entire vowel space but is based on recordings from 1981 [@leinonen1982]. More recent work over the last two decades has focused on parts of the phonological space, such as the long vowels for diphthongization studies [@pelzer-boersma2019], two vowels for merger studies [e.g., [`r linguisticsdown::cond_cmpl("ɵ")`] - [`r linguisticsdown::cond_cmpl("œ")`] in @wenner2010], or a single vowel, e.g., the damped [`r linguisticsdown::cond_cmpl("ɨː")`] [@schotz2011], see Table \@ref(tab:previous-work). These studies all provide detailed mappings of different parts of the space, and contribute important insights into the current state of as well as ongoing processes. However, given their focus on subsets of the space, a comprehensive acoustic mapping of the modern-day Central Swedish vowel space *in its entirety* is lacking. Given that there is some evidence that productions of minimal pairs can lead to enhanced contrasts [e.g., @schertz2013; @seyfarth2016], how representative such subsets are for the vowel space as a whole, remains an open question. In addition, most previous studies differ in the materials used, in terms of the size of the database (e.g., number of talkers and repetitions per vowel), the demographics of talkers (e.g., male/female talkers, region of origin), and phonological contexts used for recording. For instance, the majority of previous work has either not held the phonetic context constant across vowels, or has investigated isolated vowel production out of context or in different CVC contexts (Table \@ref(tab:previous-work)). This diversity restricts comparison across studies on Swedish, as well as cross-linguistically.
+This paper investigates the acoustic characteristics of modern-day Swedish vowels in two studies that aim to contribute to our understanding of language-specific and language-general patterns of vowel acoustics. The first study presents a comprehensive description of the primary acoustic cues to vowel identity, using a recently released database of *h-VOWEL-d* (short: hVd) words, the SwehVd database [@persson-jaeger2023]. The second study assesses whether the Swedish vowel space has been submitted to changes over the last generation, by comparing the acoustics of SwehVd against that of a reference material from 1999 [@eriksson2004]. The variety investigated is Central Swedish, the regional standard variety of Swedish spoken in an area around and beyond Stockholm (eastern Svealand) [@bruce2009; @elert1994; @riad2014].^[For the reader unfamiliar with Central Swedish, Section \@ref(sec:sweVowels) provides an overview of the acoustics of Central Swedish vowel space.] Existing descriptions of the entire space of 21 vowels rest on recordings made more than 25 years ago [reported in, e.g., @engstrand1999; @kuronen2000; @leinonen2010; @riad2014]. Two of the most recent studies are @leinonen2010 and @kuronen2000 (Table \@ref(tab:previous-work)). The former is based on recordings obtained around 1999 of all vowels, of which four short vowels were omitted from analysis. It covers 98 rural locations in Sweden and Swedish-speaking parts of Finland, including reference talkers of Standard Swedish. The latter covers the entire vowel space but is based on recordings from 1981 [@leinonen1982]. More recent work over the last two decades has focused on parts of the phonological space, such as the long vowels for diphthongization studies [@pelzer-boersma2019], two vowels for merger studies [e.g., [`r linguisticsdown::cond_cmpl("ɵ")`] - [`r linguisticsdown::cond_cmpl("œ")`] in @wenner2010], or a single vowel, e.g., the damped [`r linguisticsdown::cond_cmpl("ɨː")`] [@schotz2011], see Table \@ref(tab:previous-work). These studies all provide detailed mappings of different parts of the space, and contribute important insights into the current state of as well as ongoing processes. However, given their focus on subsets of the space, a comprehensive acoustic mapping of the modern-day Central Swedish vowel space *in its entirety* is lacking. Given that there is some evidence that productions of minimal pairs can lead to enhanced contrasts [e.g., @schertz2013; @seyfarth2016], how representative such subsets are for the vowel space as a whole, remains an open question. In addition, most previous studies differ in the materials used, in terms of the size of the database (e.g., number of talkers and repetitions per vowel), the demographics of talkers (e.g., male/female talkers, region of origin), and phonological contexts used for recording. For instance, the majority of previous work has either not held the phonetic context constant across vowels, or has investigated isolated vowel production out of context or in different CVC contexts (Table \@ref(tab:previous-work)). This diversity restricts comparison across studies on Swedish, as well as cross-linguistically.
 
 \begin{landscape}
 \begin{table}
@@ -464,7 +464,7 @@ The raw formant values were transformed into a vowel normalized space using Near
 
 Previous work on Swedish has primarily analyzed vowel data in raw Hertz [@bjorsten-engstrand1999; @fant1969; @pelzer-boersma2019], or transformed into Bark [@fant1983; @kuronen2000; @schotz2011; @wenner2010], Mel [@lindblom1963], or Lobanov [@gross2020]. The choice of Nearey's uniform scaling in the present study was motivated by its previous use in socio-phonetic research to describe and compare languages and varieties [e.g., @barreda2021; @labov2001; @labov-boberg2005], and by its plausibility as perceptual model of how we come to achieve robust cross-talker perception, as it has provided a good fit against both production [e.g., @persson-jaeger2023; @syrdal1985] and perception data [e.g., @barreda2021; @persson2024].
 
-(ref:swe-vowels) The SwehVd vowel data in unnormalized Hertz (*left*) and Nearey's uniform scaling space (*right*), along the first two formants, F1 and F2. Points show recordings of each of the 21 Central Swedish vowels by 44 (24 female) L1 talkers in the database, averaged across the three middle time-points (at 35, 50, 65% into the vowel). Vowel labels are placed at the vowel mean across talkers. Long vowels are boldfaced. Vowels that mismatched intended label are excluded (`r signif((d.SwehVd %>% filter(Transcribed_vowel != "targeted") %>% nrow() / d.SwehVd %>% nrow()) * 100)`% of all recordings).
+(ref:swe-vowels) The SwehVd vowel data in unnormalized Hertz (*left*) and Nearey's uniform scaling space (*right*), along the first two formants, F1 and F2. Points show recordings of each of the 21 Central Swedish vowels by 44 (24 female) L1 talkers in the database, averaged across the three middle time-points (at 35, 50, 65% into the vowel). Vowel labels are placed at the vowel mean across talkers. Long vowels are boldfaced. Vowel recordings on which the talker produced a different vowel than the intended are excluded (`r signif((d.SwehVd %>% filter(Transcribed_vowel != "targeted") %>% nrow() / d.SwehVd %>% nrow()) * 100)`% of all recordings).
 
 ```{r swe-vowels, fig.width=base.width*5, fig.height=base.height*3, fig.align='center', fig.pos="ht", fig.cap="(ref:swe-vowels)"}
 p <- d.SwehVd.forStudy.long.static %>%
@@ -610,7 +610,7 @@ The short vowels (right panel), present a slightly more compact space, however w
 
 (ref:swe-vowels-all-cues) The SwehVd vowel data shown for all pairwise combinations of five cues: F0, F1, F2, F3 and duration. Panels on the diagonal show marginal cue densities of all five cues. The off-diagonal panels show vowel means across talkers, represented by points and with bivariate Gaussian 95% probability mass ellipses in the upper panels, and represented by vowel labels and with points for each recording in the lower panels. Note that, unlike in Figure \@ref(fig:swe-vowels), axis directions are not reversed.
 
-```{r swe-vowels-all-cues, fig.width=base.width*4.5, fig.height=base.height*4.5, out.width = '100%', fig.align='center', fig.cap="(ref:swe-vowels-all-cues)"}
+```{r swe-vowels-all-cues, fig.width=base.width*4, fig.height=base.height*4, out.width = '100%', fig.align='center', fig.cap="(ref:swe-vowels-all-cues)"}
 p.matrix.cues <-
   d.SwehVd.forStudy.long.static %>%
   filter(F3 > .4) %>%
@@ -1658,7 +1658,7 @@ m.duration.paired <- mgcv::bam(Duration ~ category + Gender +
 ```
 
 ### Results summary
-The results from the static and dynamic analyses in Study 1 suggest that F1, F2, F3 and duration all contribute to the distinction of Central Swedish vowels. While F1 and F2 are or primary importance for most contrasts, F3 does contribute to increasing the separability between some neighboring vowels differing in lip-rounding. The static analysis furthermore suggested that the inclusion of F3 had less importance for the long-short vowel contrasts, as statistically indistinguishable performance was found for the F1-F2 model. 
+The results from the static and dynamic analyses in Study 1 suggest that F1, F2, F3 and duration all contribute to the distinction of Central Swedish vowels. While F1 and F2 are or primary importance for most contrasts, F3 does contribute to increasing the separability between some neighboring vowels differing in lip-rounding. The static analysis furthermore suggested that the inclusion of F3 had less importance for the long-short vowel contrasts, as statistically indistinguishable performance was found for the F1-F2-F3 model relative to the F1-F2 model for all but the [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] and [`r linguisticsdown::cond_cmpl("eː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`] pairs. 
 
 Some vowels displayed overlap in the static analysis but increased separability when formant dynamics was considered, as indicated by formant trajectory analysis and GAMMs. The dynamic analyses highlighted that the short vowels also display formant movements, and that for most of both long and short categories, a larger portion of the dynamics resides in the later part of the segment. Given the increased separability of neighboring contrasts found in dynamic analysis, it is reasonable to assume formant movements as an auxiliary cue to vowel identity, more so for some contrasts than others. For instance, the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʉː")`] - [`r linguisticsdown::cond_cmpl("eː")`], [`r linguisticsdown::cond_cmpl("ɪ")`] - [`r linguisticsdown::cond_cmpl("ʏ")`], [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("uː")`], [`r linguisticsdown::cond_cmpl("ɔ")`] - [`r linguisticsdown::cond_cmpl("ʊ")`], [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("æː")`],  [`r linguisticsdown::cond_cmpl("ɛ")`] - [`r linguisticsdown::cond_cmpl("æ")`], [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("œː")`], and [`r linguisticsdown::cond_cmpl("ø")`] - [`r linguisticsdown::cond_cmpl("œ")`] contrasts displayed considerable overlap in static analyses but increased distinguishibility when analysed dynamically. 
 
