--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -2,7 +2,7 @@
   title = {Synthesis Fidelity and Time-Varying Spectral Change in Vowels},
   author = {Assmann, Peter F and Katz, William F},
   year = {2005},
-  journal = {Journal of the Acoustical Society of America},
+  journal = {The Journal of the Acoustical Society of America},
   volume = {117},
   number = {2},
   pages = {886--895},
@@ -63,10 +63,11 @@
 
 @inproceedings{bjorsten-engstrand1999,
   title = {Swedish `Damped' /i/ and /y/: Experimental and Typological Observations},
-  booktitle = {Proc. 14th {{ICPhS}}},
+  booktitle = {Proceedings of the 14th {{International Congress}} of {{Phonetic Sciences}}},
   author = {Bj{\"o}rsten, Sven and Engstrand, Olle},
   year = {1999},
   address = {{San Fransisco}},
+  pages = {1957--1960},
   abstract = {In scattered Swedish dialects, the vowels /i/ and /y/ are pronounced with a markedly low F2. This results in a `damped' vowel quality that appears to be rather unusual in a typological perspective. To date, however, no experimental studies of this vowel type have been carried out using Swedish material. In this paper, formant frequencies are presented for one dialect suggesting that the /i/ vs. /y/ contrast has been neutralized, and that the resulting vowel should be associated with unrounded high central [\O ]. This hypothesis was corroborated by an articulatory simulation. It is thus suggested that the damped vowels found in the Swedish dialects are members of a relatively common vowel type. This was further supported by preliminary perceptual evidence suggesting that Swedish listeners accept Turkish [\O ] as an instance of the Swedish damped vowel and, conversely, that Turkish listeners accept this vowel as an instance of Turkish [\O ].},
   langid = {english},
   file = {/Users/anpe7128/Zotero/storage/FRG7S4YL/Björsten och Engstrand - SWEDISH ‘DAMPED’ i AND y EXPERIMENTAL AND TYP.pdf}
@@ -92,7 +93,7 @@
 @misc{boersma-weenink2022,
   title = {Praat: {{Doing}} Phonetics by Computer [{{Computer}} Program]},
   author = {Boersma, Paul and Weenink, David},
-  year = {2022}
+  year = {1992--2022}
 }
 
 @article{bradlow1995,
@@ -454,7 +455,7 @@
   title = {Acoustic Characteristics of American English Vowels},
   author = {Hillenbrand, James M and Getty, Laura A and Clark, Michael J and Wheeler, Kimberlee},
   year = {1995},
-  journal = {Journal of the Acoustical Society of America},
+  journal = {The Journal of the Acoustical Society of America},
   volume = {97},
   number = {5},
   pages = {3099--3111},
@@ -617,7 +618,7 @@
   title = {Information Conveyed by Vowels},
   author = {Ladefoged, Peter and Broadbent, Donald E},
   year = {1957},
-  journal = {Journal of the Acoustical Society of America},
+  journal = {The Journal of the Acoustical Society of America},
   volume = {29},
   pages = {98--104}
 }
@@ -633,12 +634,14 @@
   address = {{Tampere, Finland}}
 }
 
-@article{leinonen2010,
+@book{leinonen2010,
   title = {An {{Acoustic Analysis}} of {{Vowel Pronunciation}} in {{Swedish Dialects}}},
   author = {Leinonen, Therese},
   year = {2010},
-  journal = {Groningen Dissertations in Linguistics},
+  series = {Groningen Dissertations in Linguistics},
   volume = {83},
+  address = {Groningen},
+  publisher = {University of Groningen},
   issn = {0928-0030},
   langid = {english},
   file = {/Users/anpe7128/Zotero/storage/PNYSIHXY/Leinonen - An Acoustic Analysis of Vowel Pronunciation in Swe.pdf}
@@ -786,7 +789,7 @@
   title = {Control Methods Used in a Study of the Vowels},
   author = {Peterson, Gordon E and Barney, Harold L},
   year = {1952},
-  journal = {Journal of the Acoustical Society of America},
+  journal = {The Journal of the Acoustical Society of America},
   volume = {24},
   number = {2},
   pages = {175--184},
@@ -894,7 +897,7 @@
 
 @inproceedings{schotz2011,
   title = {Exotic vowels in Swedish – an articulographic and acoustic pilot study of /i:/},
-  booktitle = {Proc. 17th {{ICPhS}}},
+  booktitle = {Proceedings of the 17th {{International Congress}} of {{Phonetic Sciences}}},
   author = {Sch{\"o}tz, Susanne and Frid, Johan and L{\"o}fqvist, Anders},
   year = {2011},
   address = {{Hong Kong}},
