edits for revision

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -495,6 +495,17 @@
     eprint = {https://pubs.aip.org/asa/jasa/article-pdf/109/2/748/8087543/748\_1\_online.pdf},
 }
 
+@article{holbrook-fairbanks1962,
+  title={Diphthong formants and their movements},
+  author={Holbrook, Anthony and Fairbanks, Grant},
+  journal={Journal of speech and hearing research},
+  volume={5},
+  number={1},
+  pages={38--58},
+  year={1962},
+  publisher={ASHA}
+}
+
 @article{jacewicz-fox2018,
   title = {Regional variation in fundamental frequency of {American} {English} vowels},
   author = {Jacewicz, Ewa and Fox, Robert Allen},
@@ -621,6 +632,17 @@
   journal = {The Journal of the Acoustical Society of America},
   volume = {29},
   pages = {98--104}
+}
+
+@article{lehiste-peterson1961,
+  title={Transitions, glides, and diphthongs},
+  author={Lehiste, Ilse and Peterson, Gordon E},
+  journal={The journal of The acoustical society of America},
+  volume={33},
+  number={3},
+  pages={268--277},
+  year={1961},
+  publisher={Acoustical Society of America}
 }
 
 @inproceedings{leinonen1982,
@@ -1133,6 +1155,18 @@ year = {2018}
   issn = {0001-4966},
   doi = {10.1121/10.0001141}
 }
+
+@article{yang2019,
+  title={A comparison of normalized formant trajectories of English vowels produced by American men and women},
+  author={Yang, Byunggon and others},
+  journal={Phonetics and Speech Sciences},
+  volume={11},
+  number={1},
+  pages={1--8},
+  year={2019},
+  publisher={Korean Society of Speech Sciences}
+}
+
 
 @article{young2021,
   title = {Forced Alignment for {{Nordic}} Languages: {{Rapidly}} Constructing a High-Quality Prototype},
