--- a/output/papers/Swehvd-acoustics.Rmd
+++ b/output/papers/Swehvd-acoustics.Rmd
@@ -253,7 +253,7 @@ Wenner, 2010 & 3 repetitions of [`r linguisticsdown::cond_cmpl("œ")`] and [`r l
 #   column_spec(2:5, width = "4.5cm")
 ```
 
-The materials and methodological approach adopted in the current paper is motivated by the goal to complement previous work for a comprehensive picture of modern-day Central Swedish vowels. The first study provides an up-to-date acoustic description of the entire vowel space of 21 categories, using the SwehVd database [@persson-jaeger2023]. The use of an hVd database minimizes coarticulatory effects from the surrounding phonetic context, and increases cross-linguistic comparability [e.g., @hillenbrand1995; @Peterson1952]. The main spectral and temporal cues to vowel identity are reported in static analyses [following e.g., @engstrand1999; @fant1969], as well as dynamic analyses, given the well documented importance of formant dynamics on vowel production and perception [e.g., @assmann-katz2005; @eklund1997; @hillenbrand-nearey1999; @kuronen2000; @nearey-assmann1986]. The static analysis assesses what cues contribute to vowel distinctions and evaluates some of the claims introduced in previous work, such as the hypothesized importance of F3 for rounded vs. unrounded high front contrasts [@fant1959; @fant1969; @fujimura1967; @kuronen2000], and to what extent spectral and temporal cues contribute to long-short vowel pair distinctions [e.g., @behne-kirk1997; @kuronen2000]. The dynamic analysis explores what part of the space seems more prone to diphthongization, and investigates how formant dynamics contribute to vowel distinctions. In contrast with previous work investigating the dynamics of Central Swedish vowels, the present study includes both long and short vowels, thus submitting the entire vowel space to the same analyses. 
+The materials and methodological approach adopted in the current paper is motivated by the goal to complement previous work for a comprehensive picture of modern-day Central Swedish vowels. The first study provides an up-to-date acoustic description of the entire vowel space of 21 categories, using the SwehVd database [@persson-jaeger2023]. The use of an hVd database increases cross-linguistic comparability to previous studies that have used hVd words because of the glottal /h/ in onset minimizing supraglottal articulations [as confirmed in e.g., @chesworth2003; @robb-chen2009], hence reducing the risk of coarticulatory effects from the surrounding phonetic context. The main spectral and temporal cues to vowel identity are reported in static analyses [following e.g., @engstrand1999; @fant1969], as well as dynamic analyses, given the well documented importance of formant dynamics on vowel production and perception [e.g., @assmann-katz2005; @eklund1997; @hillenbrand-nearey1999; @kuronen2000; @nearey-assmann1986]. While fundamental frequency (F0) is not considered an important cue to vowel identity in itself, it is known to vary between languages, dialects and speech styles [e.g., @henton2005; @jacewicz-fox2018; @johnson2005; @mennen2012; @weirich2019] and is therefore reported.<!--CHECK that this is good aligned here--> The static analysis assesses what cues contribute to vowel distinctions and evaluates some of the claims introduced in previous work, such as the hypothesized importance of F3 for rounded vs. unrounded high front contrasts [@fant1959; @fant1969; @fujimura1967; @kuronen2000], and to what extent spectral and temporal cues contribute to long-short vowel pair distinctions [e.g., @behne-kirk1997; @kuronen2000]. The dynamic analysis explores what part of the space seems more prone to diphthongization, and investigates how formant dynamics contribute to vowel distinctions. In contrast with previous work investigating the dynamics of Central Swedish vowels, the present study includes both long and short vowels, thus submitting the entire vowel space to the same analyses. 
 
 Anticipating some of the main results from Study 1, the acoustic analyses suggested differences in the phonetic realization of some vowels compared to other qualitative descriptions of Central Swedish [@eklund1997; @engstrand1999; @fant1969; @kuronen2000; @riad2014]. These included the fronting of [`r linguisticsdown::cond_cmpl("eː")`], the lowering of [`r linguisticsdown::cond_cmpl("ɛː")`], and the centralization of [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] [c.f., @leinonen2010; @pelzer-boersma2019; @schotz2011]. This led me to conduct Study 2, which aimed to assess the scope and spread of these changes over the last generation, by comparing the acoustic characteristics of SwehVd against vowel data from a database of 8 (female = 4) talkers of Central Swedish recorded in 1999 as part of the SweDia dialect project [@eriksson2004].
 
@@ -457,7 +457,9 @@ For the vast majority of talkers in the SwehVd, *hädd* productions elicited the
 
 ### Acoustic analyses
 #### Measuring acoustic cues to vowel identity {#sec:cueMeasures}
-The Swedish version of the Montreal Forced Aligner developed by @young2021 was used to obtain estimates of word and segment boundaries. The boundaries were then manually corrected by the author (an L1-talker of Swedish). The formant analysis was carried out in Praat [@boersma-weenink2022], using the Burg algorithm to extract estimates of the first three formants (F1-F3) at five time-points of the vowel (20, 35, 50, 65, 80% into the vowel), while vowel duration and F0 were extracted across the entire vowel segment. The Burg algorithm was parameterized with a time step of 0.01 seconds, a window length of 0.025 seconds, and pre-emphasis was applied from 50 Hz. The maximum number of formants was set to 5, with a formant ceiling of 5500 Hz for the female talkers, and 5000 Hz for the male talkers.
+The Swedish version of the Montreal Forced Aligner developed by @young2021 was used to obtain estimates of word and segment boundaries. The boundaries were then manually corrected by the author (an L1-talker of Swedish). The formant analysis was carried out in Praat [@boersma-weenink2022], using the Burg algorithm to extract estimates of the first three formants (F1-F3) at five time-points of the vowel (20, 35, 50, 65, 80% into the vowel). The five points were selected to capture formant trajectories and potential diphthongization in the later time-points for the dynamic analysis [following, e.g., @holbrook-fairbanks1962; @kuronen2000; @lehiste-peterson1961; @yang2019], as well as provide stable measures of the steady-state of the vowel for the static analysis. <!--@pelzer-boersma2019 did 20,50,80; kuronen 4 points with 30 ms in between, @holbrook-fairbanks1962; @lehiste-peterson1961 five measurement points, six time-points @yang2019--> Vowel duration and F0 were extracted across the entire vowel segment.<!--ADD motivation to why F0 was only extracted across the segment--> The Burg algorithm was parameterized with a time step of 0.01 seconds, a window length of 0.025 seconds, and pre-emphasis was applied from 50 Hz. The maximum number of formants was set to 5, with a formant ceiling of 5500 Hz for the female talkers, and 5000 Hz for the male talkers.
+
+To correct for measurement errors in the automatic extraction of cues, 5 separate univariate distributions of the five extracted cues (F0, F1, F2, F3 and duration) was estimated for each distinct combination of talker and vowel. Points that fell outside of the $0.25th$ to the $97.5th$ quantile of the distributions for each vowel were identified, examined for measurement errors, and subsequently corrected. This followed the approach employed for the SwehVd corpus [@persson-jaeger2023], and strikes a middle-ground between the ideal (manual correction of all tokens) and feasibility.
 
 #### Vowel normalization
 The raw formant values were transformed into a vowel normalized space using Nearey's uniform scaling account [@nearey1978]. Formant measurements in Hertz are reported in the SI, Section \@ref(sec:SI-raw). Vowel normalization is used in studies on vowel production and perception to account for acoustically irrelevant inter-talker variation, as caused by differences in anatomical structure, e.g., vocal tract size [for reviews see e.g., @barreda-nearey2018; @johnson-sjerps2021; @stilp2020]. In vowel production studies such as the present, normalization is primarily used as a methodological tool. Transforming the formant data into a normalized space reduces differences in F1 and F2 due to physiology, which can reduce between-talker variability and increase category separability, as visualized in Figure \@ref(fig:swe-vowels) (compare left and right panel). 
@@ -503,7 +505,7 @@ p
 ```
 
 #### Static acoustic analysis {#sec:method-static}
-The static analysis of SwehVd presents formant measurements at the steady state of the vowel, by averaging across the three mid-points.^[The choice of time-point for extracting formants, or whether to average across several time-points, affects the acoustic characterizations given how formants move across the vowel segment. The SI (\@ref(sec:SI-measurement-points)) presents evaluations of the effect of different measurement points. For increased comparability across studies in this paper, the steady state of the vowel was selected for both studies.] It maps the entire vowel space of 21 categories and evaluates the relative contribution of F0, F1, F2, F3 and duration to vowel distinctions, using visualizations of cues and cue correlations. While fundamental frequency (F0) is not considered an important cue to vowel identity in itself, it is known to vary between languages, dialects and speech styles [e.g., @henton2005; @jacewicz-fox2018; @johnson2005; @mennen2012; @weirich2019] and is therefore reported.
+The static analysis of SwehVd presents formant measurements at the steady state of the vowel, by averaging across the three mid-points.^[The choice of time-point for extracting formants, or whether to average across several time-points, affects the acoustic characterizations given how formants move across the vowel segment. The SI (\@ref(sec:SI-measurement-points)) presents evaluations of the effect of different measurement points. For increased comparability across studies in this paper, the steady state of the vowel was selected for both studies.] It maps the entire vowel space of 21 categories and evaluates the relative contribution of F0, F1, F2, F3 and duration to vowel distinctions, using visualizations of cues and cue correlations.
 
 In order to evaluate the hypothesized importance of lip-rounding (F3) for neighboring unrounded and rounded categories, a category separability index was employed. Following work by @wedel2018 and @xie-jaeger2020, each vowel's separability from the neighboring vowel was calculated as the average distance of vowel tokens to the centroid of the neighboring vowel, operationalized as \@ref(eq:category-separability). 
 
@@ -1100,7 +1102,7 @@ rm(d.SwehVd.cat.separability.long.short)
 
 Figure \@ref(fig:cat-sep-long-short) indicates that category separability is generally higher for some pairs, e.g., [`r linguisticsdown::cond_cmpl("eː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], [`r linguisticsdown::cond_cmpl("ʉː")`] - [`r linguisticsdown::cond_cmpl("ɵ")`], and [`r linguisticsdown::cond_cmpl("ɑː")`] - [`r linguisticsdown::cond_cmpl("a")`], and that the F1-F2-F3 combination overall maximizes separability between the pairs, although the difference to the F1-F2 space appears marginal for most pairs. This would seem to suggest that the first two formants are the most important cues to long-short vowel pair distinctions, while the inclusion of an additional cue unsurprisingly does not punish the separability. For the F1-F3 and F2-F3 cue spaces, there seems to be two main groups for which either cue combination generates the lowest separability index. For the [`r linguisticsdown::cond_cmpl("ʉː")`] - [`r linguisticsdown::cond_cmpl("ɵ")`], [`r linguisticsdown::cond_cmpl("ɑː")`] - [`r linguisticsdown::cond_cmpl("a")`], [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("ɔ")`], [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`], and [`r linguisticsdown::cond_cmpl("uː")`] - [`r linguisticsdown::cond_cmpl("ʊ")`] vowel pairs, the F1-F3 cue combination generates the lowest separability, which would seem to suggest the informativity of F2 for distinguishing between these pairs. For the second group, mainly consisting of allophones to /`r linguisticsdown::cond_cmpl("ɛ")`/ and /`r linguisticsdown::cond_cmpl("ø")`/: [`r linguisticsdown::cond_cmpl("eː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], [`r linguisticsdown::cond_cmpl("æː")`] - [`r linguisticsdown::cond_cmpl("æ")`], [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("ø")`] and [`r linguisticsdown::cond_cmpl("œː")`] - [`r linguisticsdown::cond_cmpl("œ")`], the F2-F3 cue combination produces the lowest separability, presumably highlighting the importance of F1. Interestingly, the [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] pair generates almost identical separability indices in F1-F2 and F1-F3 spaces, and increased separability for both F2-F3 and F1-F2-F3, which seems to signal the importance of all three cues.
 
-These findings were confirmed by the statistical analysis (Summary tables in SI \@ref(sec:SI-LMMs-study1)): the LMMs indicated that the F1-F2-F3 cue combination generated the highest separability, however, for all but the [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] ($\hat\beta = .025, SE = .006, p < .0001$) and [`r linguisticsdown::cond_cmpl("eː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`] ($\hat\beta = .015, SE = .007, p < .041$) vowel pairs, this change was significantly indistinguishable from the F1-F2 cue combination (all other $ps > .06$). For the other comparisons, F1-F2 vs. F1-F3, and F1-F2 vs. F2-F3, the LMMs indicated significant negative changes for both comparisons for all but three vowel pairs: for the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`], there was a significant effect of cue combination in the F1-F2 vs. F1-F3 comparison only ($\hat\beta = -1.02, SE = .007, p < .0001$), for the [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] and [`r linguisticsdown::cond_cmpl("æː")`] - [`r linguisticsdown::cond_cmpl("æ")`] vowel pairs, there was a significant effect in the F1-F2 vs. F2-F3 comparison only (for [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`], $\hat\beta = .023, SE = .006, p < .0002$; for [`r linguisticsdown::cond_cmpl("æː")`] - [`r linguisticsdown::cond_cmpl("æ")`], $\hat\beta = -.014, SE = .005, p < .011$).
+These findings were confirmed by the statistical analysis (Summary tables in SI \@ref(sec:SI-LMMs-study1)): the LMMs indicated that the F1-F2-F3 cue combination generated the highest separability, however, for all but the [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] ($\hat\beta = .025, SE = .006, p < .0001$) and [`r linguisticsdown::cond_cmpl("eː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`] ($\hat\beta = .015, SE = .007, p < .041$) vowel pairs, this change was significantly indistinguishable from the F1-F2 cue combination (all other $ps > .06$).^[The alpha level for statistical significance used throughout the paper is $p < .05$.] For the other comparisons, F1-F2 vs. F1-F3, and F1-F2 vs. F2-F3, the LMMs indicated significant negative changes for both comparisons for all but three vowel pairs: for the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`], there was a significant effect of cue combination in the F1-F2 vs. F1-F3 comparison only ($\hat\beta = -1.02, SE = .007, p < .0001$), for the [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] and [`r linguisticsdown::cond_cmpl("æː")`] - [`r linguisticsdown::cond_cmpl("æ")`] vowel pairs, there was a significant effect in the F1-F2 vs. F2-F3 comparison only (for [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`], $\hat\beta = .023, SE = .006, p < .0002$; for [`r linguisticsdown::cond_cmpl("æː")`] - [`r linguisticsdown::cond_cmpl("æ")`], $\hat\beta = -.014, SE = .005, p < .011$).
 
 To sum up, the results of the static analysis suggests that F1 and F2 are the most important cues to vowel distinctions in Central Swedish. While visual inspection suggested that including F3 did not substantially increase category separability for neighboring rounded vs. unrounded contrasts, the statistical analysis found significant improvements in separability for all contrasts. This highlights subtle but significant differences, and the advantages of expanding empirical analyses to modeling approaches. 
 
@@ -1492,7 +1494,7 @@ itsadug::plot_smooth(m.F3.front.short, view = "timepoint", plot_all = "category"
 #plot_diff(m.F1.long, view = "timepoint", comp = list(category = c("[iː]", "[yː]")))
 #ggsave(file = "../../figures/p.png", width = 9, height = 5, dpi=1200)
 ```
-An effect of category on all three cues was found in all GAMMs fit to the high back long and short contrasts (all $ps < .0006$). These results suggest that formant dynamics are likely informative for these contrasts, and that all three cues contribute to distinguishing between these vowels also when formant dynamics are considered (Figure \@ref(fig:m-high-back)).^[An effect of gender was found for the high back vowels predicting F1 for the long and short vowels (both $ps < .022$), which suggests that the normalization approach likely reduced some talker-specific differences related to anatomical differences, but not all.] Figures \@ref(fig:m-high-front) and \@ref(fig:m-high-back) further highlight the presumable diphthongization in [`r linguisticsdown::cond_cmpl("eː")`] and [`r linguisticsdown::cond_cmpl("oː")`], as indicated by the steepness of the fitted curve.
+An effect of category on all three cues was found in all GAMMs fit to the high back long and short contrasts (all $ps < .0006$). These results suggest that formant dynamics are likely informative for these contrasts, and that all three cues contribute to distinguishing between these vowels also when formant dynamics are considered (Figure \@ref(fig:m-high-back)).^[An effect of gender was found for the high back vowels predicting F1 for the long and short vowels (both $ps < .022$), which suggests that the normalization approach likely reduced some talker-specific differences related to anatomical differences, but not all. An alternative explanation is that the overall difference in height for these vowels when formant dynamics is considered could be attributed to a real pronunciation difference, driven by socio-linguistic factors [see e.g., @REF on young women driving language change].]<!--CHECK this--> Figures \@ref(fig:m-high-front) and \@ref(fig:m-high-back) further highlight the presumable diphthongization in [`r linguisticsdown::cond_cmpl("eː")`] and [`r linguisticsdown::cond_cmpl("oː")`], as indicated by the steepness of the fitted curve.
 
 (ref:m-high-back) Fitted smooths of GAMM for predicting F1 (**upper row**), F2 (**mid row**), F3 (**bottom row**) and 95% confidence intervals for the long vowels [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("uː")`] (**left**), and the short vowels [`r linguisticsdown::cond_cmpl("ɔ")`] - [`r linguisticsdown::cond_cmpl("ʊ")`] (**right**).
 
@@ -1739,7 +1741,7 @@ For details on the recruitment, recording, pre-processing and annotation procedu
 
 The two databases were of unequal sample sizes overall: N = `r nrow(d.SwehVd %>% distinct(Talker, category, Token))` datapoints for SwehVd, and N = `r nrow(d.SweDia2000 %>% filter(Location == "50") %>% distinct(Talker, category, Token))` datapoints for SweDia. The regional origin of the talkers matched across databases, age at the time of recording (mean age in SweDia = `r mean(d.SweDia2000.forStudy$Age, na.rm = T) %>% round(digits = 0)`, mean age in SwehVd = `r mean(d.SwehVd.forStudy$Age, na.rm = T) %>% round(digits = 0)`) and the relative proportion of male and female talkers were also highly similar (50% female talkers in SweDia2000, 55% female talkers in SwehVd). Any potential effect of differences in gender distributions on the comparison were presumably reduced by the use of normalized vowel data.
 
-Cue measurements from SweDia were extracted in the same way as for SwehVd (Section \@ref(sec:cueMeasures)). To correct for measurement errors in the automatic extraction of cues, 5 separate univariate distributions of the five extracted cues (F0, F1, F2, F3 and duration) was estimated for each distinct combination of talker and vowel. Points that fell outside of the $0.25th$ to the $97.5th$ quantile of the distributions for each vowel were identified, examined for measurement errors, and subsequently corrected. This followed the approach employed for the SwehVd corpus [@persson-jaeger2023], and strikes a middle-ground between the ideal (manual correction of all tokens) and feasibility. Outliers were identified and removed following the approach for the subsetted SwehVd dataset used in Study 1, leaving N = `r nrow(d.SweDia2000.forStudy %>% filter(timepoint == "50") %>% distinct(Talker, category, Token))` datapoints for analysis.
+Cue measurements from SweDia were extracted and checked for measurement errors in the same way as for SwehVd (Section \@ref(sec:cueMeasures)). Outliers were identified and removed following the approach for the subsetted SwehVd dataset used in Study 1, leaving N = `r nrow(d.SweDia2000.forStudy %>% filter(timepoint == "50") %>% distinct(Talker, category, Token))` datapoints for analysis.
 
 ### Assessing vowel shifts
 In order to assess whether the relative placement of the categories in the acoustic space was different between datasets, formant data was visualized in F1-F2 space and distances assessed with the *orthogonal projection ratio*, henceforth $op$ [@stevens-schiel2019].^[Other distance measures are possible, such as Mahalanobi's distance. The primary advantages of using the $op$ is that it considers the overall structure of vowel spaces rather than individual distances, and that it offers a standardized way to compare the degree of category membership across different datasets.] Both visualizations and $op$ calculations were based on measurements at the steady-state portion of the vowel in both datasets---taking the average F1-F2 values across the three mid-points (at 35, 50, and 65% into the vowel). This approach presumably reduced the risk of coarticulatory effects resulting from the use of different phonological contexts in the datasets.
