edits revisions round 1; added F0-separability index to SI

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -96,6 +96,17 @@
   year = {1992--2022}
 }
 
+@article{boberg2019,
+  author = {Charles Boberg},
+  title ={A Closer Look at the Short Front Vowel Shift in Canada},
+  journal = {Journal of English Linguistics},
+  volume = {47},
+  number = {2},
+  pages = {91-119},
+  year = {2019},
+  doi = {10.1177/0075424219831353}
+}
+
 @article{bradlow1995,
   title={A comparative acoustic study of English and Spanish vowels},
   author={Bradlow, Ann R},
@@ -139,6 +150,17 @@
   pages={108--138},
   year={2021},
   publisher={Routledge}
+}
+
+@article{clopper2005,
+  title={Acoustic characteristics of the vowel systems of six regional varieties of American English},
+  author={Clopper, Cynthia G and Pisoni, David B and De Jong, Kenneth},
+  journal={The Journal of the Acoustical society of America},
+  volume={118},
+  number={3},
+  pages={1661--1676},
+  year={2005},
+  publisher={AIP Publishing}
 }
 
 @article{cucchiarini1995,
@@ -377,6 +399,17 @@
   file = {/Users/anpe7128/Zotero/storage/6FX68PXL/Gross and Forsberg - 2020 - Weak Lips A Possible Merger of i and y in G.pdf}
 }
 
+@article{gross2016,
+  title={A tale of two cities (and one vowel): Sociolinguistic variation in Swedish},
+  author={Gross, Johan and Boyd, Sally and Leinonen, Therese and Walker, James A},
+  journal={Language Variation and Change},
+  volume={28},
+  number={2},
+  pages={225--247},
+  year={2016},
+  publisher={Cambridge University Press}
+}
+
 @inproceedings{gussenhoven-zhou2013,
   title = {Revisiting pitch slope and height effects on perceived duration},
   author = {Gussenhoven, Carlos and Zhou, Wencui},
@@ -518,6 +551,18 @@
   doi = {10.1159/000484610}
 }
 
+@article{jacewicz2011,
+  author = {Ewa Jacewicz and Robert Allen Fox and Joseph Salmons },
+  title = {Regional Dialect Variation in the Vowel Systems of Typically Developing Children},
+  journal = {Journal of Speech, Language, and Hearing Research},
+  volume = {54},
+  number = {2},
+  pages  = {448-470},
+  year = {2011},
+  doi = {10.1044/1092-4388(2010/10-0161)},
+  URL = {https://pubs.asha.org/doi/abs/10.1044/1092-4388%282010/10-0161%29}
+}
+
 @article{jenkins1994,
     author = {Jenkins, James J. and Strange, Winifred and Miranda, Salvatore},
     title = "{Vowel identification in mixed‐speaker silent‐center syllables}",
@@ -581,6 +626,18 @@
   file = {/Users/anpe7128/Zotero/storage/2DP9QVK6/Joos - 1948 - Acoustic Phonetics.pdf}
 }
 
+@article{kent-vorperian2018,
+  title = {Static measurements of vowel formant frequencies and bandwidths: A review},
+  journal = {Journal of Communication Disorders},
+  volume = {74},
+  pages = {74-97},
+  year = {2018},
+  issn = {0021-9924},
+  doi = {https://doi.org/10.1016/j.jcomdis.2018.05.004},
+  url = {https://www.sciencedirect.com/science/article/pii/S0021992417302575},
+  author = {Raymond D. Kent and Houri K. Vorperian}
+}
+
 @book{kotsinas1995,
   title = {Dialekt {[Dialect]}},
   author = {Kotsinas, Ulla-Britt},
@@ -603,6 +660,17 @@
   langid = {swedish},
   lccn = {PT5137 .K87 2000},
   keywords = {Finland,Finnish language,Pronunciation,Swedish language,Vowels}
+}
+
+@article{labov1990,
+  title={The intersection of sex and social class in the course of linguistic change},
+  volume={2},
+  DOI={10.1017/S0954394500000338},
+  number={2},
+  journal={Language Variation and Change},
+  author={Labov, William},
+  year={1990},
+  pages={205–254}
 }
 
 @book{labov2001,
@@ -751,6 +819,20 @@
   pmid = {22423720}
 }
 
+@article{munson-solomon2004,
+  author = {Benjamin Munson and Nancy Pearl Solomon},
+  title = {The Effect of Phonological Neighborhood Density on Vowel Articulation},
+  journal = {Journal of Speech, Language, and Hearing Research},
+  volume = {47},
+  number = {5},
+  pages  = {1048--1058},
+  year = {2004},
+  doi = {10.1044/1092-4388(2004/078)},
+  URL = {https://pubs.asha.org/doi/abs/10.1044/1092-4388%282004/078%29},
+  eprint = {https://pubs.asha.org/doi/pdf/10.1044/1092-4388%282004/078%29},
+  abstract = { Recent literature suggests that phonological neighborhood density and word frequency can affect speech production, in addition to the well-documented effects that they have on speech perception. This article describes 2 experiments that examined how phonological neighborhood density influences the durations and formant frequencies of adults’ productions of vowels in real words. In Experiment 1, 10 normal speakers produced words that covaried in phonological neighborhood density and word frequency. Infrequent words with many phonological neighbors were produced with shorter durations and more expanded vowel spaces than frequent words with few phonological neighbors. Results of this experiment confirmed that this effect was not related to the duration of the vowels constituting the high- and low-density words. In Experiment 2, 15 adults produced words that varied in both word frequency and neighborhood density. Neighborhood density affected vowel articulation in both high- and low-frequency words. Moreover, frequent words were produced with more contracted vowel spaces than infrequent words. There was no interaction between these factors, and the vowel duration did not vary as a function of neighborhood density. Taken together, the results suggest that neighborhood density affects vowel production independent of word frequency and vowel duration. }
+}
+
 @book{nearey1978,
   title = {Phonetic {{Feature Systems}} for {{Vowels}}},
   author = {Nearey, Terrance M},
@@ -798,6 +880,19 @@
   URL = {https://www.frontiersin.org/articles/10.3389/fpsyg.2023.1165742},
   doi = {10.3389/fpsyg.2023.1165742},
   issn={1664-1078},
+}
+
+@inproceedings{persson-jaeger2024,
+  author = {Persson, Anna and Jaeger, T. Florian},
+  title  = {{Measuring the informativity of F3 for rounded and unrounded high-front vowels in Central Swedish}},
+  booktitle = {{Proceedings from FONETIK 2024, Stockholm, June 3–5, 2024}},
+  year = 2024,
+  pages = {13–18},
+  publisher = {Stockholm University},
+  month = May,
+  venue = {Stockholm, Sweden},
+  doi = {10.5281/zenodo.11396050},
+  url = {https://doi.org/10.5281/zenodo.11396050}
 }
 
 @manuscript{persson2024,
@@ -875,6 +970,22 @@
   lccn = {PD5131 .R53 2014},
   keywords = {Phonology,Swedish language},
   annotation = {OCLC: ocn866836612}
+}
+
+@article{scarborough2012,
+  title = {Lexical similarity and speech production: Neighborhoods for nonwords},
+  journal = {Lingua},
+  volume = {122},
+  number = {2},
+  pages = {164-176},
+  year = {2012},
+  note = {Phonological Similarity},
+  issn = {0024-3841},
+  doi = {https://doi.org/10.1016/j.lingua.2011.06.006},
+  url = {https://www.sciencedirect.com/science/article/pii/S0024384111001033},
+  author = {Rebecca Scarborough},
+  keywords = {Neighborhood density, Nonwords, Nasal coarticulation, Hyperarticulation},
+  abstract = {Lexical similarity has been shown to play a role in speech production (as in speech perception). In production, words with many phonologically similar neighbors, i.e., those that are phonologically similar to a large number of other words, are produced with more hyperarticulated vowels than words with fewer neighbors (Wright, 1997, Munson and Solomon, 2004). The experiments presented here further investigate the role that lexical similarity, expressed in terms of phonological neighborhood density, plays in the details of phonetic implementation, looking at nasal coarticulation in particular. And the way in which the grammar might produce such effects is probed by looking for neighborhood-conditioned effects in not only real words, but also nonsense words. Eight speakers of American English produced 48 highly familiar CVN or NVC words and 48 similar CVN or NVC word-like nonsense words with either many or few phonologically similar neighbors (words differing from the target word by a single phoneme). Lexical frequency and segmental context were balanced across neighborhood conditions. Degree of nasal coarticulation was measured acoustically on each vowel (A1-P0) (Chen, 1997), along with vowel duration and spectral hyperarticulation. Analysis showed that real words (both CVNs and NVCs) from dense neighborhoods (e.g., band, mug) were consistently and reliably produced with more coarticulation and more hyperarticulation than words from sparse neighborhoods (e.g., stem, mouth). Vowel duration was not affected. The same consistent effects of neighborhood were found for nonsense words as well (e.g., gand, mub vs. blem, maub) for approximately half of the speakers in the study. The other speakers showed consistently opposite effects for nonsense words (i.e., greater nasal coarticulation and hyperarticulation in nonsense words from sparse neighborhoods), despite patterning with the rest of the speakers for real words. These findings demonstrate that phonological similarity at the lexical level has an influence on phonetic realization: similarity to a greater number of real words is associated with increased coarticulation as well as hyperarticulation. Interestingly, the degree of coarticulation and hyperarticulation vary systematically in nonwords as well, but the nature of the systematic relationship differs across two groups of speakers: some speakers produce nonsense words just like real words with increased hyperarticulation and coarticulation in nonsense words from dense neighborhoods, while other speakers produce nonsense words with the opposite systematic relationship—with increased hyperarticulation and coarticulation in nonsense words from sparse neighborhoods. However, because nonsense words, like real words, show some kind of systematic relationship between detail in production and lexical similarity neighborhoods, the differences in phonetic implementation must not be encoded directly in the representation, as nonwords have no long-term representations. Rather, lexical similarity must be assessed online with active reference to a space in the lexicon (the neighborhood).}
 }
 
 @book{schaeffler2005,
@@ -1116,6 +1227,19 @@ year = {2018}
   series = {Skrifter Utgivna Av {{Institutionen}} F\"or Nordiska Spr\aa k Vid {{Uppsala}} Universitet 80}
 }
 
+@article{whalen-levitt1995,
+title = {The universality of intrinsic F0 of vowels},
+journal = {Journal of Phonetics},
+volume = {23},
+number = {3},
+pages = {349-366},
+year = {1995},
+issn = {0095-4470},
+doi = {https://doi.org/10.1016/S0095-4470(95)80165-0},
+url = {https://www.sciencedirect.com/science/article/pii/S0095447095801650},
+author = {D.H. Whalen and Andrea G. Levitt}
+}
+
 @article{wieling2018,
   title={Analyzing dynamic phonetic data using generalized additive mixed modeling: A tutorial focusing on articulatory differences between L1 and L2 speakers of English},
   author={Wieling, Martijn},
@@ -1124,6 +1248,21 @@ year = {2018}
   pages={86--116},
   year={2018},
   publisher={Elsevier}
+}
+
+@article{woods1997,
+  author = {Woods, Nicola J.},
+  title = {The Formation and Development of New Zealand English: Interaction of Gender-Related Variation and Linguistic Change},
+  journal = {Journal of Sociolinguistics},
+  volume = {1},
+  number = {1},
+  pages = {95-125},
+  keywords = {Sound change, dialect contact, gender-related variability, New Zealand English},
+  doi = {https://doi.org/10.1111/1467-9481.00005},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1467-9481.00005},
+  eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1467-9481.00005},
+  abstract = {This research assesses the relative roles played by men and women in the development of New Zealand English. Real-time evidence on the development of NZ English over the past fifty years is provided by comparison of speakers recorded in 1948 and their present day descendants recorded recently. Elements of two vowel shifts are studied, and particular attention is paid to the vowel variables in words such as MOUTH, TRAP and DRESS. Results indicate that women lead in changes which are new and dynamic, but lag behind men in the use of variables representing older changes. While these results mirror patterns of gender-related variation observed in other contexts, explanations in terms of prestige which are often assumed to account for this pattern of variation are found to be inadequate in the New Zealand case. Rather, a hypothesis in terms of dialect contact, and specifically women’s preferred discourse strategies in contact situations, is used to explain the process and progress of linguistic change in NZ English.},
+  year = {1997}
 }
 
 @article{wright2004,
